# ECEN489-Fall2015

./: README.md
Assignments/: 1optout.md  2optout.md  3optout.md  4optout.md  5optout.md  6optout.md  README.md  optout1.md
Emails/: Assignment1.txt  Assignment2.txt  Assignment3.txt  Assignment4.txt  Assignment5.txt  Assignment6.txt  Assignment7.txt  PeerEvaluation2.txt  README.md  Task4.txt  greetings.txt
Examples/CMakeHelloWorld/: README.md  helloworld.cpp
Examples/CppHelloWorld/: README.md  helloworld.cpp
Miscellaneous/: ProjectBasedLearning.pptx  README.md
Miscellaneous/Graders/: CMakeLists.txt  README.md  assignment1-graders.txt  assignment3-graders.txt  assignment4-graders.txt  assignment5-graders.txt  assignment6-graders.txt  assignment7-graders.txt  graders.cpp  project1-teams.txt  project2-teams.txt  task1-graders.txt  task2-graders.txt
Miscellaneous/Grades/: quiz1-grades.md  task1-grades.md  task2-grades.md  task3-grades.md
Miscellaneous/src/: ProjectDAES-Syllabus.tex  README.md  evaluation-peers.tex  evaluation-tasks.tex  projectDAESintro.tex
Miscellaneous/src/Figures/: Circles.tex  Deliverables.tex  Mosaic.tex  ProblemSelection.tex  Versioning.tex
Project1/: Interoperability.md  README.md  Team4.md
Project1/team2/QT_bluetooth/: mainwindow.cpp
Project1/team2/Qt_plot/: mainwindow.cpp  mainwindow.h
Project1/team2/arduino/: project1.ino
Project2/: README.md
Project3/: README.md  prj3.brd  prj3.sch
Project3/Team1/project3_QT/: bluetooth_connect.cpp  bluetooth_connect.h  btthread.cpp  btthread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Project3/Team1/project3_simulator/: pid_controller.cpp
Project3/Team1/project3_teensy/: project3_teensy.ino
Project3/Team4/: PCB_BOM.xlsx  Project3-cache.lib  Project3.kicad_pcb  Project3.sch
Project3/Team4/KiCad/: BlockDiagram.bak  Project3-B_Cu.gbr  Project3-Edge_Cuts.gbr  Project3.bak  Project3.kicad_pcb  Project3.kicad_pcb-bak  Project3.net  Project3.pro  Project3.sch  Project3.xml  fp-lib-table
Project3/Team4/Resources/: Images.pptx  TankCalibration.xlsx  state machine project3.pptx
Project3/Team4/arduino/: project3_489.ino  project3_objVol.ino
Students/: README.md  karticbhargav  malokyle
Students/ATaghavi/: README.md
Students/ATaghavi/1optout/: CMakeLists.txt  HammingUtil.cpp  HammingUtil.h
Students/ATaghavi/2optout/: README.md
Students/ATaghavi/3optout/: CmakeLists.txt  client.cpp  server.cpp
Students/Cooper95/: README.md
Students/HaiLi/: README.md
Students/HaiLi/7optOutalpha/serialServer/: CMakeLists.txt  serialServer.cpp
Students/HaiLi/project1/Server/: CMakeLists.txt  Server.cpp
Students/HaiLi/project1/Server/sqlite3/: CMakeLists.txt
Students/abhaysanand/: README.md
Students/abhaysanand/2optout/: CMakeLists.txt  HTTPDownloader.hpp  README.md  stdafx.h
Students/abhaysanand/2optout/Output/: GoT.json  GoT.md
Students/abhaysanand/2optout/VisualStudioProject/json_curl_optout2/: json_curl_optout2.sln
Students/abhaysanand/2optout/VisualStudioProject/json_curl_optout2/json_curl_optout2/: HTTPDownloader.cpp  ReadMe.txt  json_curl_optout2.cpp  json_curl_optout2.vcxproj  json_curl_optout2.vcxproj.filters  jsoncpp.cpp  stdafx.cpp
Students/abhaysanand/4optout/UDP_Broadcast/: CMakeLists.txt  README.md  UDP_Broadcast.cpp  jsoncpp.cpp  stdafx.h
Students/abhaysanand/4optout/UDP_Server/: CMakeLists.txt  README.md  UDP_Server.cpp  stdafx.cpp  stdafx.h
Students/abhaysanand/6optout/Teensy_Broadcast/: CMakeLists.txt  README.md  Teensy_Broadcast.cpp  stdafx.cpp  stdafx.h
Students/abhaysanand/6optout/Teensy_Server/: CMakeLists.txt  README.md  Teensy_Server.cpp
Students/abhaysanand/quickfire-thermistor/Client_Code/: CMakeLists.txt  client.cpp  lib.7z
Students/agramir16/: Qt_tutorial.txt  README.md
Students/bladeroybal/: README.md  project2.md
Students/buttonsense/: README.md
Students/epranaykumar/: 5optOut.md  README.md
Students/epranaykumar/2optout/JsonUnwrapping/: CMakeLists.txt  JsontoMarkdown.cpp
Students/epranaykumar/2optout/JsonWrapping/: CMakeLists.txt  fetchData.cpp  fetchData.h  jsonWrap.cpp  parseData.cpp  parseData.h
Students/epranaykumar/4optout/udpclient/: CMakeLists.txt  udpClient.cpp
Students/epranaykumar/4optout/udpclient/json/: CMakeLists.txt
Students/epranaykumar/4optout/udpserver/: CMakeLists.txt  udpserver.cpp
Students/epranaykumar/6optOut/serialClient/: CMakeLists.txt  serialClient.cpp
Students/henryyu8/: README.md
Students/kaimen.walters/: README.md
Students/karticbhargav/: AnalogReadSerial.ino  README.md.txt
Students/karticbhargav/1optout/: CMakeLists.txt  decoder.cpp  decoder.h  encoder.cpp  encoder.h  main.cpp
Students/karticbhargav/4optout/: CMakeLists.txt  JSONClient.cpp  JSONServer.cpp  README  README.md
Students/karticbhargav/4optout/json/: CMakeLists.txt~  jsoncpp.cpp~
Students/karticbhargav/6optout/: CMakeLists.txt  TeensyClient.cpp  TeensyServer.cpp
Students/karticbhargav/6optout/json/: jsoncpp.cpp  value.h~
Students/karticbhargav/6optout/quickfire2/: quickfire2.ino
Students/keabro/: README.md
Students/ksgriesser11/: README.md
Students/malokyle/: README.md
Students/shashanknaphade/: readme.md
Students/stevenyou92/: README.md
Students/tbranyon/: README.md
Students/travistag/: README.md
Students/travistag/1optout/src/: CMakeLists.txt  binaryGenerator.cpp  hamming.cpp  hamming.h  hammingencode.cpp  matrixTT.cpp  matrixTT.h
Students/ubkothapalli/: README.md
Students/ubkothapalli/3optout/CppServer/: CMakeLists.txt  server.cpp
Students/ubkothapalli/4optout/Server/: CMakeLists.txt  CMakeLists.txt~  server.cpp  udpserver.cpp
Students/ubkothapalli/6optout/Server/: CMakeLists.txt  serialServer.cpp~  server.cpp
Students/ubkothapalli/quickfire-3/clientserver/: CMakeLists.txt  client.cpp  server.cpp
Students/wszk1992/:  README.md  README.md
Tasks/: 1Task.md  1task.md  2Task.md  2task.md  3task.md  4task.md  5task.md  README.md
Tutorials/: README.md
Tutorials/bluetooth/: setup.ino  testcode.ino
Tutorials/motorControl/: servotest.ino
Tutorials/sqilte/: CMakeLists.txt  pp.cpp
(+658 files in other folders)
